--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <!-- Radio 1 -->
         <input
+          class="Radio"
           type="radio"
           name="rad"
           value="Radio"
@@ -26,6 +27,7 @@
 
         <!-- Radio 3 -->
         <input
+          class="Radio"
           type="radio"
           name="rad"
           id="greenBtn"
@@ -36,6 +38,7 @@
 
         <!-- Radio 2 -->
         <input
+          class="Radio"
           type="radio"
           name="rad"
           id="blueBtn"
